welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:24: error: Missing closing brace `}' assumed here
}
^