welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
//def fairePot(){
	def growFlowers(){
		def faireR(){
			setCouleurBrosse(Color.RED)
			baisseBrosse();
			avance();avance();recule();gauche();baisseBrosse();avance();recule();recule
			leveBrosse();setCouleurBrosse(Color.YELLOW);avance();baisseBrosse()
			leveBrosse();droite();avance();avance()
		}
		faireR()
		avance()
		def faireC(){
			setCouleurBrosse(Color.CYAN)
			baisseBrosse();
			avance();avance();recule();gauche();baisseBrosse();avance();recule();recule
			leveBrosse();setCouleurBrosse(Color.YELLOW);avance();baisseBrosse()
			leveBrosse();droite();avance();avance();avance()
		
      }
//}
